fixed adress time from being right to left aligned (outlook fix)

--- a/journey_receipt/template.html
+++ b/journey_receipt/template.html
@@ -415,7 +415,7 @@
           <img class="symbol" src="PinA.png" style="margin: 0;padding: 0; border: 0; font: inherit; font-size: 100%; -webkit-font-smoothing: antialiased; box-sizing: border-box; width: 16px; height: 16px;" />
         </td>
         <td>
-            <p style="font: inherit; font-size: 14px; -webkit-font-smoothing: antialiased; box-sizing: border-box; position: relative; width: fit-content; margin-top: -1px; font-family: 'Noto Sans-Bold', Helvetica; font-weight: 700; color: #05164d; text-align: right; letter-spacing: 0; line-height: 18px; white-space: nowrap;">
+            <p style="font: inherit; font-size: 14px; -webkit-font-smoothing: antialiased; box-sizing: border-box; position: relative; width: fit-content; margin-top: -1px; font-family: 'Noto Sans-Bold', Helvetica; font-weight: 700; color: #05164d; text-align: left; letter-spacing: 0; line-height: 18px; white-space: nowrap;">
               08:56 AM
             </p>
             <p style="font: inherit; font-size: 14px; -webkit-font-smoothing: antialiased; box-sizing: border-box; position: relative; align-self: stretch; font-family: 'Noto Sans-Regular', Helvetica; font-weight: 400; color: #05164d; letter-spacing: 0; line-height: 18px; width: 100%; text-align: left;">
@@ -428,7 +428,7 @@
           <img class="symbol" src="PinB.png" style="margin: 0;padding: 0; border: 0; font: inherit; font-size: 100%; -webkit-font-smoothing: antialiased; box-sizing: border-box; width: 16px; height: 16px;" />
         </td>
         <td>
-            <p style="font: inherit; font-size: 14px; -webkit-font-smoothing: antialiased; box-sizing: border-box; position: relative; width: fit-content; margin-top: -1px; font-family: 'Noto Sans-Bold', Helvetica; font-weight: 700; color: #05164d; text-align: right; letter-spacing: 0; line-height: 18px; white-space: nowrap;">
+            <p style="font: inherit; font-size: 14px; -webkit-font-smoothing: antialiased; box-sizing: border-box; position: relative; width: fit-content; margin-top: -1px; font-family: 'Noto Sans-Bold', Helvetica; font-weight: 700; color: #05164d; text-align: left; letter-spacing: 0; line-height: 18px; white-space: nowrap;">
               08:56 AM
             </p>
             <p style="font: inherit; font-size: 14px; -webkit-font-smoothing: antialiased; box-sizing: border-box; position: relative; align-self: stretch; font-family: 'Noto Sans-Regular', Helvetica; font-weight: 400; color: #05164d; letter-spacing: 0; line-height: 18px; width: 100%; text-align: left;">
@@ -441,7 +441,7 @@
           <img class="symbol" src="PinC.png" style="margin: 0;padding: 0; border: 0; font: inherit; font-size: 100%; -webkit-font-smoothing: antialiased; box-sizing: border-box; width: 16px; height: 16px;" />
         </td>
         <td>
-            <p style="font: inherit; font-size: 14px; -webkit-font-smoothing: antialiased; box-sizing: border-box; position: relative; width: fit-content; margin-top: -1px; font-family: 'Noto Sans-Bold', Helvetica; font-weight: 700; color: #05164d; text-align: right; letter-spacing: 0; line-height: 18px; white-space: nowrap;">
+            <p style="font: inherit; font-size: 14px; -webkit-font-smoothing: antialiased; box-sizing: border-box; position: relative; width: fit-content; margin-top: -1px; font-family: 'Noto Sans-Bold', Helvetica; font-weight: 700; color: #05164d; text-align: left; letter-spacing: 0; line-height: 18px; white-space: nowrap;">
               08:56 AM
             </p>
             <p style="font: inherit; font-size: 14px; -webkit-font-smoothing: antialiased; box-sizing: border-box; position: relative; align-self: stretch; font-family: 'Noto Sans-Regular', Helvetica; font-weight: 400; color: #05164d; letter-spacing: 0; line-height: 18px; width: 100%; text-align: left;">
@@ -454,7 +454,7 @@
           <img class="symbol" src="PinZ.png" style="margin: 0;padding: 0; border: 0; font: inherit; font-size: 100%; -webkit-font-smoothing: antialiased; box-sizing: border-box; width: 16px; height: 16px;" />
         </td>
         <td>
-            <p style="font: inherit; font-size: 14px; -webkit-font-smoothing: antialiased; box-sizing: border-box; position: relative; width: fit-content; margin-top: -1px; font-family: 'Noto Sans-Bold', Helvetica; font-weight: 700; color: #05164d; text-align: right; letter-spacing: 0; line-height: 18px; white-space: nowrap;">
+            <p style="font: inherit; font-size: 14px; -webkit-font-smoothing: antialiased; box-sizing: border-box; position: relative; width: fit-content; margin-top: -1px; font-family: 'Noto Sans-Bold', Helvetica; font-weight: 700; color: #05164d; text-align: left; letter-spacing: 0; line-height: 18px; white-space: nowrap;">
               08:56 AM
             </p>
             <p style="font: inherit; font-size: 14px; -webkit-font-smoothing: antialiased; box-sizing: border-box; position: relative; align-self: stretch; font-family: 'Noto Sans-Regular', Helvetica; font-weight: 400; color: #05164d; letter-spacing: 0; line-height: 18px; width: 100%; text-align: left;">
